# COE322

./: README.md  a.out  fizzbuzz.cpp  hello.cpp  if.cpp  linalg.cpp  temp.cpp
HW1/: a.out  fizzbuzz-initializer.cpp
HW10/: .#zeroclasstest.cpp  CMakeLists.txt  zeroclasslib.cpp  zeroclasslib.hpp
HW10build/: CMakeCache.txt  Makefile  bisect  cmake_install.cmake
HW11/: CMakeLists.txt  newtonroottemp.cpp
HW11build/: CMakeCache.txt  Makefile  cmake_install.cmake  newtonroottemp
HW12/: CMakeLists.txt  abctuple.cpp
HW12build/: CMakeCache.txt  Makefile  abctuple  cmake_install.cmake
HW2/: fizzbuzz-initializer.cpp
HW3/: a.out  collatz.cpp
HW4/: a.out  newton.cpp  sqrt2.cpp  sqrt2.cpp~
HW4build/: CMakeCache.txt  Makefile  cmake_install.cmake  newton
HW5/: CMakeLists.txt  anyroot.cpp  fizzbuzz  fizzbuzz.cpp  fizzbuzz.sh
HW5build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
HW5install/: fizzbuzz.sh
HW6/: CMakeLists.txt  CMakeLists.txt~  perfectnum.cpp
HW6build/: CMakeCache.txt  Makefile  cmake_install.cmake  perfectnum
HW7/: CMakeLists.txt  point.cpp
HW7build/: CMakeCache.txt  Makefile  cmake_install.cmake  point
HW8/: CMakeLists.txt
HW8build/: CMakeCache.txt  Makefile  cmake_install.cmake  pascal
HW9/: CMakeLists.txt  linklist.cpp
HW9build/: CMakeCache.txt  Makefile  cmake_install.cmake  linklist
tests/: #abctuple.cpp#  a.out  abctuple.cpp  anynewtonroot.cpp  anynewtonroot.cpp~  class.cpp  complex.cpp  e.cpp  e.cpp~  linkshared.cpp  newtonroot.cpp  newtontroot.cpp  pointers.cpp  precision.cpp  rect.cpp  require.cpp  (+9 more)
(+9 files in other folders)
